--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "socket.io-client": "^4.0.0",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.4",
+    "vue-recaptcha": "^1.3.0",
     "vue-router": "^3.5.1",
     "vue-socket.io": "^3.0.10",
     "vue-toastification": "^1.7.11"
